# OS_design

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  allocator.h  dir_sys.c  dir_sys.h  disk_io.h  file_sys.c  file_sys.h  format.c  format.h  main.c  说明.md
build-asan/: CMakeCache.txt  Makefile  cmake_install.cmake
doc/: asm-reference.md  c-reference.md  function-call-graph.puml  gen_汇报课件.py  reading-guide.md  交付测试文档.md  代码说明文档.md  六次汇报进度记录.md  汇报.html  汇报文稿.md  汇报课件.html  第一部分演示-虚拟磁盘与块设备.md  说明文档.md  需要看懂的代码.txt  项目实现文件与函数说明.md  验收讲解内容.md
include/: kernel_shared.h  libtest.hpp  vfs.h  vfs_core.h
involve_src/: echo_test.asm  fork_test.asm  fork_test.c  hello_c.c  hello_test.asm  hello_test.c  ipcfifo.asm  ipcfifo.c  ipcmsg.asm  ipcmsg.c  ipcsem.asm  ipcsem.c  ipcshm.asm  ipcshm.c  ipcsig.asm  ipcsig.c  mem_mgr.asm  pipe_test.asm  pipe_test.c  pr.asm  pr.c  pw.asm  pw.c  sum.asm  sum.c  systest.asm  systest.c  testLT.c
script/: Makefile  websrv  websrv.c
src/: allocator.c  allocator.h  assembler.c  assembler.h  binaries.c  binaries.h  disk_io.c  disk_io.h  editor.c  editor.h  file_sys.c  format.c  main.c  main.cpp  serve.c  serve.h  user_mgmt.c  user_mgmt.h  web_api.c  web_page.h
src/compiler/: ast.c  ast.h  c2s.c  c2s.h  codegen.c  codegen.h  lexer.c  lexer.h  parser.c  parser.h  regalloc.c  regalloc.h  runtime.h  runtime.s
src/fs/: allocator.c  allocator.h  bg.c  bg.h  buf.c  buf.h  dir_sys.c  dir_sys.h  disk_io.c  disk_io.h  extent.c  extent.h  file_sys.c  file_sys.h  format.c  format.h  inomap.c  inomap.h  journal.c  journal.h  vfs.c
src/kernel/: cpu.c  cpu.h  ipc.c  ipc.h  kernel_shared.c  memory.c  memory.h  pipe.c  pipe.h  process.c  process.h  scheduler.c  scheduler.h  syscall.c  syscall.h
src/user/: env.c  env.h  user_mgmt.c  user_mgmt.h
